--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DDM Wallet</title>
+    <title>GPE Wallet</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,10 +43,10 @@
               <hr class="my-4">
           </div>
           <div class="col-lg-8 col-md-6 mx-auto">
-            <p class="mb-0">版本號碼：1.3.32 - 15.5 MB</p>
-            <p class="mb-0">更新時間：2019 - 07 - 01</p>
+            <p class="mb-0">版本號碼：1.3.30 - 17.9 MB</p>
+            <p class="mb-0">更新時間：2019 - 07 - 03</p>
             <p></p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="itms-services://?action=download-manifest&url=https://eagleho0523.github.io/fimqwdba/iOS/manifest.plist">點擊安裝</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="itms-services://?action=download-manifest&url=https://gpe-blackchain.github.io/gpeksjaf/iOS/manifest.plist">點擊安裝</a>
           </div>
         </div>
       </div>
