--- a/android.html
+++ b/android.html
@@ -39,7 +39,7 @@
           </div>
           <div class="col-lg-8 col-md-6 mx-auto">
               <p class="text-muted mb-1">掃描二維碼下載</p>
-              <p class="text-muted mb-1">僅支援iOS裝置</p>
+              <p class="text-muted mb-1">Android下載安裝</p>
               <hr class="my-4">
           </div>
           <div class="col-lg-8 col-md-6 mx-auto">
