--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <p></p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="itms-services://?action=download-manifest&url=https://gpe-blackchain.github.io/gpeksjaf/iOS/manifest.plist">點擊安裝</a>
           </div>
+          <div class="col-lg-8 col-md-6 mx-auto">
+            <p></p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://gpe-blackchain.github.io/gpeksjaf/android.html">安卓安裝</a>
+          </div>
         </div>
       </div>
     </header>
