--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
           <div class="col-lg-8 col-md-6 mx-auto">
             <p></p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://gpe-blackchain.github.io/gpeksjaf/android.html">安卓安裝</a>
+            <a class="btn btn-secondary btn-xl js-scroll-trigger" href="https://gpe-blackchain.github.io/gpeksjaf/android.html">安卓安裝</a>
           </div>
         </div>
       </div>
